--- a/css/residents.scss
+++ b/css/residents.scss
@@ -55,13 +55,13 @@
         &::before {
           position: absolute;
           content: "";
-          background-image: url("/img/residents/residents-img-2-elem.png");
+          background-image: url("../img/residents/residents-img-2-elem.png");
           width: 45px;
           height: 45px;
           top: 16px;
           left: 42%;
           transform: translateX(-50%);
-          z-index: 2;
+          z-index: 0;
         }
       }
 
@@ -75,7 +75,7 @@
 
         &::before {
           display: block;
-          content: url("/img/icon/potato.svg");
+          content: url("../img/icon/potato.svg");
           position: absolute;
           bottom: -273px;
           right: 153px;
@@ -110,7 +110,7 @@
 
         &::before {
           position: absolute;
-          content: url("/img/icon/biggestsnakeever.svg");
+          content: url("../img/icon/biggestsnakeever.svg");
           top: -650px;
           right: 350px;
           z-index: -1;
@@ -392,13 +392,13 @@
         &::before {
           position: absolute;
           content: "";
-          background-image: url("/img/residents/residents-img-2-elem.png");
+          background-image: url("../img/residents/residents-img-2-elem.png");
           width: 45px;
           height: 45px;
           top: 16px;
           left: 42%;
           transform: translateX(-50%);
-          z-index: 2;
+          z-index: 0;
         }
       }
 
@@ -411,7 +411,7 @@
 
         &::before {
           display: block;
-          content: url("/img/icon/potato.svg");
+          content: url("../img/icon/potato.svg");
           position: absolute;
           bottom: -273px;
           right: 153px;
@@ -446,7 +446,7 @@
 
         &::before {
           position: absolute;
-          content: url("/img/icon/biggestsnakeever.svg");
+          content: url("../img/icon/biggestsnakeever.svg");
           top: -650px;
           right: 350px;
           z-index: -1;
@@ -729,13 +729,13 @@
         &::before {
           position: absolute;
           content: "";
-          background-image: url("/img/residents/residents-img-2-elem.png");
+          background-image: url("../img/residents/residents-img-2-elem.png");
           width: 45px;
           height: 45px;
           top: 16px;
           left: 42%;
           transform: translateX(-50%);
-          z-index: 2;
+          z-index: 0;
         }
       }
 
@@ -748,7 +748,7 @@
 
         &::before {
           display: block;
-          content: url("/img/icon/potato.svg");
+          content: url("../img/icon/potato.svg");
           position: absolute;
           bottom: -273px;
           right: 153px;
@@ -784,7 +784,7 @@
 
         &::before {
           position: absolute;
-          content: url("/img/icon/biggestsnakeever.svg");
+          content: url("../img/icon/biggestsnakeever.svg");
           top: -650px;
           right: 350px;
           z-index: -1;
