--- a/css/news.scss
+++ b/css/news.scss
@@ -205,6 +205,7 @@
       margin: 0 auto;
       display: flex;
       justify-content: center;
+      margin-bottom: 96px;
 
       ul {
         display: flex;
