--- a/css/residents.scss
+++ b/css/residents.scss
@@ -234,21 +234,21 @@
             position: relative;
             display: block;
 
-            &:valid:after {
-              display: flex;
-              position: absolute;
-              content: attr(data-placeholder);
-              width: 100%;
-              height: 100%;
-              left: 0;
-              padding: 24px 20px;
-              box-sizing: border-box;
-              align-items: center;
-              gap: 10px;
-              border-radius: 24px;
-              background: #fff;
-              color: #9e9e9e;
-            }
+            // &:valid:after {
+            //   display: flex;
+            //   position: absolute;
+            //   content: attr(data-placeholder);
+            //   width: 100%;
+            //   height: 100%;
+            //   left: 0;
+            //   padding: 24px 20px;
+            //   box-sizing: border-box;
+            //   align-items: center;
+            //   gap: 10px;
+            //   border-radius: 24px;
+            //   background: #fff;
+            //   color: #9e9e9e;
+            // }
 
             &:hover,
             &:focus,
@@ -570,21 +570,21 @@
             position: relative;
             display: block;
 
-            &:valid:after {
-              display: flex;
-              position: absolute;
-              content: attr(data-placeholder);
-              width: 100%;
-              height: 100%;
-              left: 0;
-              padding: 24px 20px;
-              box-sizing: border-box;
-              align-items: center;
-              gap: 10px;
-              border-radius: 24px;
-              background: #fff;
-              color: #9e9e9e;
-            }
+            // &:valid:after {
+            //   display: flex;
+            //   position: absolute;
+            //   content: attr(data-placeholder);
+            //   width: 100%;
+            //   height: 100%;
+            //   left: 0;
+            //   padding: 24px 20px;
+            //   box-sizing: border-box;
+            //   align-items: center;
+            //   gap: 10px;
+            //   border-radius: 24px;
+            //   background: #fff;
+            //   color: #9e9e9e;
+            // }
 
             &:hover,
             &:focus,
@@ -909,21 +909,21 @@
             position: relative;
             display: block;
 
-            &:valid:after {
-              display: flex;
-              position: absolute;
-              content: attr(data-placeholder);
-              width: 100%;
-              height: 100%;
-              left: 0;
-              padding: 24px 20px;
-              box-sizing: border-box;
-              align-items: center;
-              gap: 10px;
-              border-radius: 24px;
-              background: #fff;
-              color: #9e9e9e;
-            }
+            // &:valid:after {
+            //   display: flex;
+            //   position: absolute;
+            //   content: attr(data-placeholder);
+            //   width: 100%;
+            //   height: 100%;
+            //   left: 0;
+            //   padding: 24px 20px;
+            //   box-sizing: border-box;
+            //   align-items: center;
+            //   gap: 10px;
+            //   border-radius: 24px;
+            //   background: #fff;
+            //   color: #9e9e9e;
+            // }
 
             &:hover,
             &:focus,
