--- a/css/residents.css
+++ b/css/residents.css
@@ -475,6 +475,21 @@
     position: relative;
     display: block;
   }
+  .trn-residents .announcement form .input .trn-datetime-input:valid:after {
+    display: flex;
+    position: absolute;
+    content: attr(data-placeholder);
+    width: 100%;
+    height: 100%;
+    left: 0;
+    padding: 24px 20px;
+    box-sizing: border-box;
+    align-items: center;
+    gap: 10px;
+    border-radius: 24px;
+    background: #fff;
+    color: #9e9e9e;
+  }
   .trn-residents .announcement form .input .trn-datetime-input:hover::after, .trn-residents .announcement form .input .trn-datetime-input:focus::after, .trn-residents .announcement form .input .trn-datetime-input:active::after {
     display: none;
   }
