--- a/css/residents.css
+++ b/css/residents.css
@@ -556,7 +556,7 @@
 }
 @media (min-width: 390px) and (max-width: 760px) {
   .trn-residents .content {
-    padding: 152px 30px 0;
+    padding: 152px 16px 0;
     margin-bottom: 96px;
   }
   .trn-residents .material {
@@ -665,9 +665,10 @@
     margin-top: 12px;
     margin-bottom: 0;
     text-align: center;
+    font-size: 24px;
   }
   .trn-residents .announcement-wrapper .section-title .h3::after {
-    margin-top: -22px;
+    margin-top: -10px;
   }
   .trn-residents .announcement-wrapper .section-title-descr {
     color: var(--Text-text-black, #414141);
