--- a/css/residents.scss
+++ b/css/residents.scss
@@ -672,7 +672,7 @@
 @media (min-width: $mobWidth) and (max-width: $lapTopWidth) {
   .trn-residents {
     .content {
-      padding: 152px 30px 0;
+      padding: 152px 16px 0;
       margin-bottom: 96px;
     }
 
@@ -800,9 +800,10 @@
             margin-top: 12px;
             margin-bottom: 0;
             text-align: center;
+            font-size: 24px;
 
             &::after {
-              margin-top: -22px;
+              margin-top: -10px;
             }
           }
 
